--- a/17NOV2025/project2/index.html
+++ b/17NOV2025/project2/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello world</h1>
-    <h2>Hello </h2>
+    <main>
+        <button>create Element</button>
+    </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
