--- a/18NOV2025/index.html
+++ b/18NOV2025/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello world</h1>
-    <h2>Hello </h2>
+    
+    
+    <script src="script.js"></script>
 </body>
 </html>
